--- a/src/component/Order/order.scss
+++ b/src/component/Order/order.scss
@@ -10,6 +10,9 @@
         @include mobile{
             flex-direction: column;
         }
+        @include tablet{
+            flex-direction: column;
+        }
 
         .leftContainer{
             flex: 1;
