--- a/src/component/Gallery/gallery.scss
+++ b/src/component/Gallery/gallery.scss
@@ -9,6 +9,10 @@
     @include mobile{
         justify-content: space-around; 
       }  
+      
+    @include tablet{
+        justify-content: space-around; 
+      }  
 
     h1{
         font-size: 70px;
@@ -19,9 +23,10 @@
 
         @include mobile{
             font-size: 30px;
-            padding: 10px;
+            margin-top: 10px;
             overflow: hidden;
         }
+
 
     }
 
@@ -35,9 +40,31 @@
             flex-direction: column;   
             height: 100%;
         }
+        @include tablet{
+            flex-direction: column;   
+            height: 100%;
+        }
 
+        .wrapper{
+            width: 70%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 10px;
+
+            @include tablet{
+                width: 100%;
+                overflow: auto;
+            }
+
+            @include mobile{
+                width: 100%;
+                overflow: auto;
+            }
+            
         .card{
-            width: 500px;
+            width: 400px;
             height: 70%;
             border-radius: 10px;
             box-shadow:  0px 0px 15px -8px black;
@@ -46,18 +73,30 @@
             justify-content: space-evenly;
             padding: 20px;
             transition:  all 1s ease;
-
-            img {
-                @include mobile{
-                    width: 350px;
-                    height: 180px;
-
-                }
-            }
+            margin: 10px 20px;
+            position: relative;
+            
             
 
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                // @include mobile{
+                //     width: 90%;
+                //     height: 200px;
+
+                // }
+            }
+            
             @include mobile{
-                height: 180px;
+                height: 200px;
+                width: 100%;
+                margin: 10px 0;
+            }
+            @include tablet{
+                height: 200px;
+                width: 100%;
                 margin: 10px 0;
             }
 
@@ -73,12 +112,21 @@
                     margin: 10px 0;
 
                 }
+                
+                @include tablet{
+                    height: 180px;
+                    width: 250px;
+                    margin: 1px;
+                    margin: 10px 0;
+
+                }
             }
 
             &:hover{
                 transform: scale(1.1);
             }
         }
+    }
 
     }
 
