--- a/src/component/Order/order.scss
+++ b/src/component/Order/order.scss
@@ -40,12 +40,20 @@
                 text-align: center;
                 font-size: 70px;
                 padding: 20px;
+                
+                @include mobile{
+                    font-size: 40px;
+                }
 
             }
 
             p{
                 font-size: 30px;
                 padding: 20px;
+
+                @include mobile{
+                    font-size: 20px;
+                }
 
             }
 
